wip: push latest changes

--- a/apps/su-gtd/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/su-gtd/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,24 @@
-<div class="row">
-  <nb-card>
-    <nb-card-body>Hello from ngx-admin sandbox project.</nb-card-body>
-  </nb-card>
-</div>
+<nb-card status="success">
+  <nb-card-body><h1 class="title">Welcome Walter White!</h1></nb-card-body>
+</nb-card>
+
+<nb-card status="success">
+  <nb-card-header>
+    <nb-icon
+      class="me-2"
+      icon="attach-outline"
+      [options]="{ animation: { type: 'zoom' } }"
+    ></nb-icon
+    >PROPOSED CAREER AND COUNSELING DASHBOARD SYSTEM FOR SU GUIDANCE AND TESTING
+    DIVISION</nb-card-header
+  >
+  <nb-card-body>
+    A Project Submitted to the Faculty of the Bachelor of Science in Business
+    Administration Business Analytics Department College of Business
+    Administration Silliman University Dumaguete City
+  </nb-card-body>
+  <nb-card-footer
+    ><strong>Proposed by:</strong> Daryl Janone V. Baco, Lyca Neanne L. Bulado,
+    Jose Noel P. Palomo</nb-card-footer
+  >
+</nb-card>
