--- a/apps/su-gtd/src/app/@theme/components/header/header.component.scss
+++ b/apps/su-gtd/src/app/@theme/components/header/header.component.scss
@@ -11,6 +11,10 @@
     display: flex;
     align-items: center;
     width: calc(#{nb-theme(sidebar-width)} - #{nb-theme(header-padding)});
+
+    img {
+      width: 20%;
+    }
   }
 
   nb-action {
@@ -24,7 +28,7 @@
   }
 
   ::ng-deep nb-search button {
-    padding: 0!important;
+    padding: 0 !important;
   }
 
   .header-container {
@@ -43,8 +47,8 @@
     }
 
     .logo {
-      padding: 0 1.25rem;
-      font-size: 1.75rem;
+      padding: 0 0.5rem;
+      font-size: 1.5rem;
       @include nb-ltr(border-left, 1px solid nb-theme(divider-color));
       @include nb-rtl(border-right, 1px solid nb-theme(divider-color));
       white-space: nowrap;
