--- a/apps/su-gtd/src/app/@theme/styles/themes.scss
+++ b/apps/su-gtd/src/app/@theme/styles/themes.scss
@@ -8,10 +8,15 @@ $nb-themes: nb-register-theme(
     layout-padding-top: 2.25rem,
 
     menu-item-icon-margin: 0 0.5rem 0 0,
-    menu-item-active-text-color: var(--color-danger-500),
-    menu-item-icon-active-color: var(--color-danger-500),
-    menu-item-hover-text-color: var(--color-danger-500),
-    menu-item-icon-hover-color: var(--color-danger-500),
+    menu-item-active-text-color: #cc3201,
+    menu-text-color: #ffffff,
+    menu-item-icon-color: #ffffff,
+    menu-item-icon-active-color: #cc3201,
+    menu-item-hover-background-color: #ffffff,
+    menu-item-active-background-color: #ffffff,
+    menu-group-text-color: #ffffff,
+    menu-item-hover-text-color: #cc3201,
+    menu-item-icon-hover-color: #cc3201,
     card-height-tiny: 13.5rem,
     card-height-small: 21.1875rem,
     card-height-medium: 28.875rem,
@@ -27,6 +32,7 @@ $nb-themes: nb-register-theme(
     slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
     slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
 
+    sidebar-background-color: #cc3201,
     user-initials-text-color: #ffffff,
   ),
   default,
