--- a/apps/su-gtd/src/app/pages/annual-report/dialogs/annual-report-confirmation-dialog/annual-report-confirmation-dialog.component.html
+++ b/apps/su-gtd/src/app/pages/annual-report/dialogs/annual-report-confirmation-dialog/annual-report-confirmation-dialog.component.html
@@ -1,14 +1,22 @@
 <nb-card>
   <nb-card-header><h3>Are you sure?</h3></nb-card-header>
-  <nb-card-body
-    >This will be reviewed by the Head and can't be undone.</nb-card-body
-  >
+  <nb-card-body>You are about to submit/update an annual form.</nb-card-body>
   <nb-card-footer>
     <div class="d-flex justify-content-between">
-      <button [autofocus]="false" nbButton status="success" (click)="dismiss()">
+      <button
+        [autofocus]="false"
+        nbButton
+        status="success"
+        (click)="dismiss(true)"
+      >
         CONFIRM
       </button>
-      <button [autofocus]="false" nbButton status="danger" (click)="dismiss()">
+      <button
+        [autofocus]="false"
+        nbButton
+        status="danger"
+        (click)="dismiss(false)"
+      >
         CANCEL
       </button>
     </div>
