--- a/apps/su-gtd/src/app/pages/auth/login/login.component.html
+++ b/apps/su-gtd/src/app/pages/auth/login/login.component.html
@@ -33,7 +33,7 @@
   </ul>
 </nb-alert>
 
-<form (ngSubmit)="login()" [formGroup]="form" aria-labelledby="title">
+<form [formGroup]="form" aria-labelledby="title">
   <div class="form-control-group">
     <label class="label" for="input-email">Email address:</label>
     <input
@@ -134,7 +134,7 @@
     size="medium"
     [disabled]="submitted || !form.valid"
     [class.btn-pulse]="submitted"
-    (click)="login()"
+    (click)="loginUser()"
   >
     Log In
   </button>
