--- a/apps/su-gtd/src/app/pages/statistics/statistics.component.html
+++ b/apps/su-gtd/src/app/pages/statistics/statistics.component.html
@@ -1,4 +1,121 @@
 <nb-card>
-  <nb-card-header> Statistics </nb-card-header>
-  <nb-card-body> </nb-card-body>
+  <nb-card-header> <h4>Statistics</h4> </nb-card-header>
+  <nb-card-body>
+    <h3>Activities of Colleges by Year:</h3>
+    <div
+      [formGroup]="activitiesByYearForm"
+      class="d-flex flex-row align-items-baseline"
+    >
+      <p>Annual Report Year:</p>
+      <nb-select
+        class="annual-report-year ms-3"
+        id="select-year"
+        name="year"
+        placeholder="Select Year"
+        size="medium"
+        formControlName="year"
+        (selectedChange)="showData()"
+      >
+        <nb-option *ngFor="let year of years" [value]="year">{{
+          year
+        }}</nb-option>
+      </nb-select>
+    </div>
+    <div>
+      <h5>
+        Total number of activites currently showing:
+        {{ totalNumOfActivitiesYear }}
+      </h5>
+    </div>
+    <div class="d-flex justify-content-center">
+      <canvas
+        baseChart
+        [type]="'pie'"
+        [datasets]="pieChartDatasets"
+        [labels]="pieChartLabels"
+        [options]="pieChartOptions"
+        [plugins]="pieChartPlugins"
+        [legend]="pieChartLegend"
+      >
+      </canvas>
+    </div>
+    <h3 class="mt-5">Comparison between two Colleges by Year:</h3>
+    <div class="form-control-group" class="mb-2">
+      <div [formGroup]="comparisonCollegesForm" class="row">
+        <div class="col-sm-4">
+          <label for="select-college" class="label mb-2"
+            >College/Department A</label
+          >
+          <nb-select
+            formControlName="collegeA"
+            id="select-college"
+            name="selectCollege"
+            placeholder="Select College"
+            size="medium"
+            fullWidth
+            (selectedChange)="showComparisonData()"
+          >
+            <nb-option
+              *ngFor="let college of colleges | keyvalue"
+              [value]="college.value"
+              >{{ college.value }}</nb-option
+            >
+          </nb-select>
+        </div>
+        <div class="col-sm-4">
+          <label for="select-college" class="label mb-2"
+            >College/Department B</label
+          >
+          <nb-select
+            formControlName="collegeB"
+            id="select-college"
+            name="selectCollege"
+            placeholder="Select College"
+            size="medium"
+            fullWidth
+            (selectedChange)="showComparisonData()"
+          >
+            <nb-option
+              *ngFor="let college of colleges | keyvalue"
+              [value]="college.value"
+              >{{ college.value }}</nb-option
+            >
+          </nb-select>
+        </div>
+        <div class="col-sm-4">
+          <label for="select-year" class="label mb-2">Annual Report Year</label>
+          <nb-select
+            formControlName="year"
+            id="select-year"
+            name="year"
+            placeholder="Select Year"
+            size="medium"
+            fullWidth
+            (selectedChange)="showComparisonData()"
+          >
+            <nb-option *ngFor="let year of years" [value]="year">{{
+              year
+            }}</nb-option>
+          </nb-select>
+        </div>
+      </div>
+    </div>
+    <div
+      *ngIf="isShowingComparisons"
+      class="d-flex justify-content-around mt-4"
+    >
+      <h4>{{ comparisonCollegesForm.get('collegeA').value }}</h4>
+      <h4>{{ comparisonCollegesForm.get('collegeB').value }}</h4>
+    </div>
+    <div class="comparison-charts d-flex justify-content-around">
+      <su-gtd-bar-chart
+        [labels]="guidanceServices"
+        [dataset]="collegeADataset"
+      ></su-gtd-bar-chart>
+      <su-gtd-bar-chart
+        [labels]="guidanceServices"
+        [dataset]="collegeBDataset"
+      ></su-gtd-bar-chart>
+    </div>
+  </nb-card-body>
 </nb-card>
