chore: changes and remove console logs

--- a/apps/su-gtd/src/app/pages/annual-report/annual-report.component.scss
+++ b/apps/su-gtd/src/app/pages/annual-report/annual-report.component.scss
@@ -31,21 +31,27 @@ td {
 }
 
 p.activity-name {
-  width: 27vw;
+  width: 26vw;
+  font-size: small;
 }
 
 p.date {
-  width: 20.25vw;
+  width: 16.25vw;
+  font-size: small;
 }
 
 p.target-group {
   width: 10.5vw;
+
+  font-size: small;
 }
 
 p.performance-indicator {
-  width: 12.5vw;
+  width: 11.25vw;
+  font-size: small;
 }
 
 p.percentage {
   width: 3vw;
+  font-size: small;
 }
