--- a/apps/su-gtd/src/app/pages/annual-report/annual-report.component.html
+++ b/apps/su-gtd/src/app/pages/annual-report/annual-report.component.html
@@ -7,7 +7,7 @@
       class="mb-2"
     >
       <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-6">
           <label for="select-college" class="label mb-2"
             >College/Department</label
           >
@@ -26,7 +26,7 @@
             >
           </nb-select>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-3">
           <label for="select-year" class="label mb-2">Annual Report Year</label>
           <nb-select
             id="select-year"
@@ -41,7 +41,7 @@
             }}</nb-option>
           </nb-select>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3 d-flex">
           <button
             class="mt-4"
             nbButton
@@ -49,11 +49,10 @@
             (click)="getActivitiesOfViewReports()"
             appearance="filled"
             status="success"
-            size="medium"
-            shape="round"
           >
-            SUBMIT
+            <nb-icon icon="arrow-forward-outline"></nb-icon>
           </button>
+
           <button
             class="ms-3 mt-4"
             nbTooltip="Reset Value"
