fix: fix adjustments

--- a/apps/su-gtd/src/app/@theme/components/header/header.component.html
+++ b/apps/su-gtd/src/app/@theme/components/header/header.component.html
@@ -5,8 +5,7 @@
     </a>
     <img src="assets\images\silliman_logo.png" alt="Silliman Logo" />
     <a class="logo" href="#" (click)="navigateHome()"
-      >PROPOSED CAREER AND COUNSELING DASHBOARD SYSTEM FOR SU GUIDANCE AND
-      TESTING DIVISION</a
+      >SU-GUIDANCE AND TESTING DIVISION DASHBOARD</a
     >
   </div>
 </div>
