--- a/apps/su-gtd/src/app/pages/statistics/statistics.component.html
+++ b/apps/su-gtd/src/app/pages/statistics/statistics.component.html
@@ -39,6 +39,18 @@
       >
       </canvas>
     </div>
+    <div class="d-flex justify-content-center mt-3">
+      <canvas
+        baseChart
+        [type]="'pie'"
+        [datasets]="pieChartDatasets2"
+        [labels]="pieChartLabels2"
+        [options]="pieChartOptions2"
+        [plugins]="pieChartPlugins2"
+        [legend]="pieChartLegend2"
+      >
+      </canvas>
+    </div>
     <h3 class="mt-5">Comparison between two Colleges by Year:</h3>
     <div class="form-control-group" class="mb-2">
       <div [formGroup]="comparisonCollegesForm" class="row">
