refactor: address changes

--- a/apps/su-gtd/src/app/pages/statistics/statistics.component.html
+++ b/apps/su-gtd/src/app/pages/statistics/statistics.component.html
@@ -26,6 +26,10 @@
         Total number of activites currently showing:
         {{ totalNumOfActivitiesYear }}
       </h5>
+
+      <h5 class="mt-4 text-center">
+        Pie Chart of Activities per College Department
+      </h5>
     </div>
     <div class="d-flex justify-content-center">
       <canvas
@@ -38,6 +42,11 @@
         [legend]="pieChartLegend"
       >
       </canvas>
+    </div>
+    <div>
+      <h5 class="mt-4 text-center">
+        Pie Chart of College Department per Activities
+      </h5>
     </div>
     <div class="d-flex justify-content-center mt-3">
       <canvas
