--- a/apps/su-gtd/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/su-gtd/src/app/pages/dashboard/dashboard.component.html
@@ -12,9 +12,11 @@
       class="me-2"
       icon="attach-outline"
       [options]="{ animation: { type: 'zoom' } }"
-    ></nb-icon
-    >PROPOSED CAREER AND COUNSELING DASHBOARD SYSTEM FOR SU GUIDANCE AND TESTING
-    DIVISION</nb-card-header
+    ></nb-icon>
+    <span class="fw-bold">
+      PROPOSED CAREER AND COUNSELING DASHBOARD SYSTEM FOR SU GUIDANCE AND
+      TESTING DIVISION
+    </span></nb-card-header
   >
   <nb-card-body>
     A Project Submitted to the Faculty of the Bachelor of Science in Business
