feat: change pie chart to bar charts

--- a/apps/su-gtd/src/app/pages/statistics/components/bar-chart/bar-chart.component.scss
+++ b/apps/su-gtd/src/app/pages/statistics/components/bar-chart/bar-chart.component.scss
@@ -1,4 +1,11 @@
-div,
-canvas {
-  height: 250px !important;
+.default {
+  canvas {
+    height: 250px !important;
+  }
+}
+
+.large {
+  canvas {
+    height: 500px !important;
+  }
 }
