--- a/apps/su-gtd/src/app/pages/statistics/components/bar-chart/bar-chart.component.html
+++ b/apps/su-gtd/src/app/pages/statistics/components/bar-chart/bar-chart.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="isInit">
+<div *ngIf="isInit" [ngClass]="classVariant">
   <canvas
     *ngIf="dataset.length"
     baseChart
     [data]="barChartData"
-    [options]="barChartOptions"
+    [options]="options"
     [plugins]="barChartPlugins"
-    [legend]="barChartLegend"
+    [legend]="legend"
     [type]="'bar'"
   >
   </canvas>
